# Barkoz-Tempo

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: TODO.txt
docs/MoveGeneration/: chessRules-moveLeaglity.drawio
lib/MagicNumberGen/: HashMagicFunctions.hpp
src/: main.cpp
src/BitOperation/: BitOperation.hpp  CMakeLists.txt
src/BitOperation/inc/: BitOperation.hpp
src/Board/: Board.cpp  Board.hpp  CMakeLists.txt
src/Board/inc/: Board.hpp
src/BoardUtils/: BoardUtil.hpp  BoardUtils.cpp  CMakeLists.txt
src/Debug/: CMakeLists.txt  Debug.h  DebugAnsi.h  DebugCfg.h
src/Engine/: CMakeLists.txt  Evaluation.cpp  Evaluation.h  Search.cpp  Search.h  TranspositionTable.h
src/Evaluation/: CMakeLists.txt  Evaluation.cpp  Evaluation.h
src/Map/: HashMagicFunctions.hpp
src/Move/: Move.hpp
src/MoveGeneration/: BishopMap.h  BlackPawnMap.hpp  CMakeLists.txt  ChessRules.cpp  ChessRules.hpp  KingPattern.hpp  KnightPattern.hpp  Move.hpp  MoveEncoder.h  MoveGenerator.cpp  MoveGenerator.h  MoveUtils.hpp  QueenMap.h  RookMap.h  WhitePawnMap.hpp
src/MoveGeneration/MoveParser/: CMakeLists.txt  MoveParser.cpp  MoveParser.h
src/MoveGeneration/Perft/: CMakeLists.txt  PerftFunctions.cpp  PerftFunctions.h  PerftStats.h
src/MoveGenerator/: BishopMap.h  BlackPawn.hpp  BlackPawnMap.hpp  CMakeLists.txt  ChessRules.cpp  ChessRules.hpp  HashMagicFunctions.hpp  KingPattern.hpp  KnightPattern.hpp  MagicNumber.hpp  Move.hpp  MoveEncoder.h  MoveGenerator.cpp  MoveGenerator.h  MoveUtils.hpp  QueenMap.h  RookMap.h  WhitePawn.hpp  WhitePawnMap.hpp
src/MoveGenerator/MagicGeneration/: CMakeLists.txt  HashMagicFunctions.hpp  RookHolder.hpp
src/PieceMap/: CMakeLists.txt  PieceMap.cpp  PieceMap.h  PieceMap.hpp
src/Search/: CMakeLists.txt  Search.cpp  Search.h
src/Shared/: CMakeLists.txt  Std.h  StdCfg.h
src/StateInfo/: CMakeLists.txt  StateInfo.hpp
src/Uci/: CMakeLists.txt  Uci.cpp  Uci.h
tests/functional_tests/perft/: test_perft.py
tests/functional_tests/perft/cpp_bindings/: CMakeLists.txt  perft_wrapper.cpp
tests/unit_tests/: TestMoveUtility.cc  moveUtility_test.cc
tools/MagicGenerator/: BishopHolder.hpp  CMakeLists.txt  HashMagicFunctions.hpp  MagicGenerator.cpp  MagicGenerator.hpp  MagicHolder.hpp  MagicSlider.hpp  RookHolder.hpp  main.cpp
